fix: actualiza openapi y swagger
